added delete function on dashboard. now will remove user from admin dashboard

--- a/src/components/Style/Style.css
+++ b/src/components/Style/Style.css
@@ -1,6 +1,8 @@
 .card {
-    width: 20%;
-    height: 500px;
+    width: 15%;
+    height: 450px;
+    display: inline-block;
+    margin: 1%;
 }
 
 .cardImage {
