--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,36 +1,31 @@
 .nav-title {
-    font-size: 24px;
+    font-size: 35px;
     font-weight: 700;
     display: inline-block;
     color: #f2f2f2;
-    padding-left: 10px;
 }
 
 .nav {
   overflow: hidden;
-  background-color: #00acb0;
+  background-color: #333;
+  width: 100%;
 }
 
 .nav-link {
-  float: left;
-  color: #f2f2f2;
-  background-color: #00acb0;
-  text-align: center;
-  padding: 24px 10px;
-  text-decoration: none;
-  font-size: 15px;
-
-  /* these last two make the logout button in
-  the nav bar look like another link */
-  border:none;
+  color: rgb(141, 139, 139);
   cursor: pointer;
-  outline:0;
+  width: 100%;
+  text-decoration: none;
 }
 
-.nav-link:hover {
-  background-color: #008183;
+.nav-list {
+  list-style-type: none;
+  padding-left: 0px;
 }
 
-.nav-right {
-  float: right;
+li {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+  border-bottom: .5px solid rgb(141, 139, 139);
 }
