added styling to login and register page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,41 +9,45 @@ body {
 }
 
 form {
-    background-color: #dbd5d5;
-    width: 30%;
-    height: 250px;
-    margin: 20px auto;
-    padding: 25px;
-    border-radius: 2px;
-}
-
-input {
-    margin: 5px;
-    margin-bottom: 10px;
+    width: 50%;
+    height: 200px;
+    margin: auto;
+    margin-top: 90px;
 }
 
 .log-in, .log-out, .register {
-  background-color: #00acb0;
-  border-radius: 4px;
-  color: #f8f8f8;
+  background-color: #ffffff;
+  border: 3px solid #9dceb5;
+  color: #9dceb5;
   min-height: 50px;
-  min-width: 100px;
+  min-width: 300px;
   outline:0;
   cursor: pointer;
-}
-
-.log-in:hover, .log-out:hover, .register:hover {
-  background-color: #008183;
+  font-size: 20px;
+  margin-top: 100px;
 }
 
 /* This line makes the "Register" and "Login" buttons look like links */
 .link-button {
-    background:none;
-    color:inherit;
-    border:none;
-    padding:0;
-    font: inherit;
+    background-color: #ffffff;
+    border: 3px solid #809fcf;
+    color: #809fcf;
+    min-height: 50px;
+    min-width: 300px;
     outline:0;
-    border-bottom:1px solid #444; 
     cursor: pointer;
+    font-size: 20px;
+    margin-top: 300px;
+}
+
+.login-form {
+    text-align: center;
+}
+
+.log-textfield {
+    margin-top: 20px;
+}
+
+.login-picture {
+    margin-bottom: 20px;
 }
