--- a/src/components/Style/Style.css
+++ b/src/components/Style/Style.css
@@ -4,6 +4,7 @@
 
 .main {
     grid-area: main;
+    margin: 20px;
 }
 
 .wrapper {
@@ -23,16 +24,10 @@
 
 .card {
     width: 300px;
-    height: 450px;
+    height: 400px;
     display: inline-block;
     margin: .5%;
 }
-
-/* .cardImage {
-    height: 70%;
-    padding-top: 10px;
-    padding-right: 10px;
-} */
 
 .taskCard {
     height: 45px;
@@ -62,6 +57,3 @@
     margin-right: 10px;
 }
 
-.radioImage {
-    padding: 20px 10px 20px 10px;
-}
