--- a/src/components/Style/Style.css
+++ b/src/components/Style/Style.css
@@ -67,3 +67,28 @@
     text-indent: 2em;
 }
 
+.addNewTaskBtn {
+    background-color: #ffffff;
+    border: 3px solid #809fcf;
+    color: #809fcf;
+    min-height: 50px;
+    min-width: 300px;
+    outline:0;
+    cursor: pointer;
+    font-size: 20px;
+    margin-top: 50px;
+}
+
+.goBackBtn {
+    background-color: #ffffff;
+    border: 3px solid #9dceb5;
+    color: #9dceb5;
+    min-height: 50px;
+    min-width: 300px;
+    outline:0;
+    cursor: pointer;
+    font-size: 20px;
+    margin-top: 50px;
+}
+
+
