--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,9 +1,9 @@
 .nav-title {
-    font-size: 35px;
-    font-weight: 700;
+    font-size: 45px;
     display: inline-block;
-    color: #f2f2f2;
+    color: #699dfd;
     margin-left: 15px;
+    font-family: 'Caveat';
 }
 
 .nav {
