--- a/src/components/Style/Style.css
+++ b/src/components/Style/Style.css
@@ -58,7 +58,7 @@
     margin-right: 10px;
 }
 
-.addNewTaskBtn {
+.addNewTaskBtn, .addNewPersonBtn {
     background-color: #ffffff;
     border: 3px solid #809fcf;
     color: #809fcf;
