--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .alert {
